--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
         exclude:
           - python-version: '3.13'
             packages: 'pyspark==3.5.6'
+      fail-fast: false
 
     steps:
     - uses: actions/checkout@v4
@@ -37,4 +38,4 @@ jobs:
     
     - name: Run tests
       run: |
-        uv run pytest -k "not test_huggingface_writer"
+        uv run pytest
