--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.9', '3.13']
-        packages: ['pyspark>=4.0.0', 'pyspark==3.5.6']
+        packages: ['pyspark>=4.0.0', 'pyspark==3.5.6 numpy<2.0.0']
         exclude:
           - python-version: '3.13'
             packages: 'pyspark==3.5.6'
@@ -20,22 +20,22 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-    
+
     - name: Install uv
       run: |
         curl -LsSf https://astral.sh/uv/install.sh | sh
         echo "$HOME/.cargo/bin" >> $GITHUB_PATH
-    
+
     - name: Install dependencies
       run: |
-        uv add --dev ${{ matrix.packages }}
-        uv sync
-    
+        uv add --no-sync --dev ${{ matrix.packages }}
+        uv sync --python ${{ matrix.python-version }}
+
     - name: Run tests
       run: |
         uv run pytest
