fix python version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,9 @@ jobs:
 
     - name: Install dependencies
       run: |
-        uv add --no-sync --dev "${{ join(matrix.packages, '" "') }}"
-        uv sync --python ${{ matrix.python-version }}
+        echo "${{ matrix.python-version }}" > .python-version
+        uv add --dev "${{ join(matrix.packages, '" "') }}"
+        uv sync
 
     - name: Run tests
       run: |
