--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
 [dependency-groups]
 dev = [
     "ipykernel>=6.29.5",
+    "pyarrow-stubs>=19.4",
     "pyspark>=4.0.0",
     "pytest>=8.0.0",
     "pytest-dotenv>=0.5.2",
