--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,9 @@ license = {text = "Apache License 2.0"}
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
-    "datasets>=3.2",
-    "huggingface-hub>=0.27.1",
+    "datasets>=4.0",
+    "huggingface-hub>=0.34.4",
+    "pyarrow>=21.0.0",
 ]
 
 [dependency-groups]
